--- a/Notes/组网控制器发包测试.md
+++ b/Notes/组网控制器发包测试.md
@@ -6,7 +6,7 @@
 
 ### 使用环境
 
-​	两台笔记本，一台网口连接至服务器端（发送端），一台网口连接至UE（接收端）；
+​	两台笔记本，一台网口连接至服务器端（发送端），一台网口连接至UE（接收端）；事先配置好python环境，并安装wincap.exe软件
 
 ### 程序介绍
 
